platform/vcluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: vcluster-ingress
  namespace: my-vcluster
spec:
  ingressClassName: nginx
  rules:
    - host: my-vcluster.example.com
      http:
        paths:
          - backend:
              service:
                name: my-vcluster
                port:
                  number: 443
            path: /
            pathType: ImplementationSpecific
